--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
+        multiDexEnabled true
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -41,6 +42,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.github.ar-android:AndroidSvgLoader:1.0.1'
     implementation 'com.google.android.gms:play-services-ads:15.0.1'
+
 }
